--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>CAMPO MINATO</h1>
-        <button id="play">PLAY</button>
+        <div class="left-side">
+            <h1>CAMPO MINATO</h1>
+        </div>
+        <form class="right-side">
+            <button id="play">PLAY</button>
+            <label>
+                <select name="" id="level">
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                </select>
+            </label>
+        </form>
     </header>
 
     <main>
