esercizio completo di bonus

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form class="right-side">
             <button id="play">PLAY</button>
             <label>
-                <select name="" id="level">
+                <select name="" id="difficult">
                     <option value="easy">Easy</option>
                     <option value="medium">Medium</option>
                     <option value="hard">Hard</option>
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-        <div>QUALCOSA</div>
+        <h2>Made with love by Me :)</h2>
     </footer>
 
     <script src="js/function.js"></script>
